--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "babel-preset-react": "^6.24.1",
     "eslint": "^4.19.1",
     "eslint-config-google": "^0.9.1",
+    "eslint-plugin-react": "^7.9.1",
     "webpack": "^4.11.1",
     "webpack-cli": "^3.0.3"
   },
