--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,12 @@
 {
     "extends": "google",
     "parser": "babel-eslint",
+    "plugins": [
+      "react"
+    ],
     "rules": {
-      "require-jsdoc": 0
+      "require-jsdoc": 0,
+      "react/jsx-uses-vars": "error",
+      "react/jsx-uses-react": "error"
     }
 }
