--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "babel-cli": "^6.26.0",
     "babel-eslint": "^8.2.3",
     "babel-loader": "^7.1.4",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "eslint": "^4.19.1",
@@ -21,6 +22,7 @@
     "webpack-cli": "^3.0.3"
   },
   "dependencies": {
+    "marked": "^0.4.0",
     "react": "^16.4.0",
     "react-dom": "^16.4.0"
   }
