--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,11 +2,14 @@
     "extends": "google",
     "parser": "babel-eslint",
     "plugins": [
-      "react"
+      "react",
+      "babel"
     ],
     "rules": {
       "require-jsdoc": 0,
       "react/jsx-uses-vars": "error",
-      "react/jsx-uses-react": "error"
+      "react/jsx-uses-react": "error",
+      "no-invalid-this": 0,
+      "babel/no-invalid-this": 1
     }
 }
