--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "eslint-config-google": "^0.9.1",
     "eslint-plugin-babel": "^5.1.0",
     "eslint-plugin-react": "^7.9.1",
+    "hard-source-webpack-plugin": "^0.8.1",
     "style-loader": "^0.21.0",
     "webpack": "^4.11.1",
     "webpack-cli": "^3.0.3"
