--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "webpack-cli": "^3.0.3"
   },
   "dependencies": {
+    "express": "^4.16.3",
     "marked": "^0.4.0",
     "react": "^16.4.0",
     "react-dom": "^16.4.0"
