--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "repository": "git@github.com:azujuuuuuun/markdown-editor.git",
   "license": "MIT",
   "scripts": {
-    "build": "node_modules/.bin/eslint --fix src && node_modules/.bin/webpack --display-error-details"
+    "build": "node_modules/.bin/webpack --display-error-details",
+    "start": "webpack-dev-server"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
@@ -17,12 +18,15 @@
     "css-loader": "^0.28.11",
     "eslint": "^5.0.1",
     "eslint-config-google": "^0.9.1",
+    "eslint-loader": "^2.0.0",
     "eslint-plugin-babel": "^5.1.0",
     "eslint-plugin-react": "^7.9.1",
     "hard-source-webpack-plugin": "^0.8.1",
+    "html-webpack-plugin": "^3.2.0",
     "style-loader": "^0.21.0",
     "webpack": "^4.11.1",
-    "webpack-cli": "^3.0.3"
+    "webpack-cli": "^3.0.3",
+    "webpack-dev-server": "^3.1.4"
   },
   "dependencies": {
     "express": "^4.16.3",
