--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "repository": "git@github.com:azujuuuuuun/markdown-editor.git",
   "license": "MIT",
   "scripts": {
-    "build": "node_modules/.bin/webpack --display-error-details",
-    "start": "webpack-dev-server"
+    "build": "node_modules/.bin/webpack --display-error-details --watch",
+    "start": "./node_modules/.bin/nodemon ./src/server/app.js --watch ./"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
@@ -22,11 +22,10 @@
     "eslint-plugin-babel": "^5.1.0",
     "eslint-plugin-react": "^7.9.1",
     "hard-source-webpack-plugin": "^0.8.1",
-    "html-webpack-plugin": "^3.2.0",
+    "nodemon": "^1.17.5",
     "style-loader": "^0.21.0",
     "webpack": "^4.11.1",
-    "webpack-cli": "^3.0.3",
-    "webpack-dev-server": "^3.1.4"
+    "webpack-cli": "^3.0.3"
   },
   "dependencies": {
     "express": "^4.16.3",
