--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "pg": "^7.4.3",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
+    "react-router-dom": "^4.3.1",
     "sequelize": "^4.38.0"
   }
 }
