--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "webpack-cli": "^3.0.3"
   },
   "dependencies": {
+    "axios": "^0.18.0",
+    "crypto-js": "^3.1.9-1",
     "express": "^4.16.3",
     "marked": "^0.4.0",
     "pg": "^7.4.3",
