--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "crypto-js": "^3.1.9-1",
+    "body-parser": "^1.18.3",
     "express": "^4.16.3",
     "marked": "^0.4.0",
     "pg": "^7.4.3",
