--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "body-parser": "^1.18.3",
     "crypto-js": "^3.1.9-1",
     "express": "^4.16.3",
+    "jsonwebtoken": "^8.3.0",
     "marked": "^0.4.0",
     "pg": "^7.4.3",
     "react": "^16.4.0",
