--- a/package.json
+++ b/package.json
@@ -39,7 +39,9 @@
     "pg": "^7.4.3",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
+    "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
+    "redux": "^4.0.0",
     "sequelize": "^4.38.0"
   }
 }
